--- a/index.html
+++ b/index.html
@@ -21,7 +21,7 @@
   <body class="bg-white text-black dark:bg-black dark:text-white flex items-center justify-center min-h-screen">
     <div class="text-center space-y-8">
       <!-- Dark Mode Toggle -->
-      <button id="theme-toggle" class="p-2 rounded-full bg-white text-black dark:bg-white dark:text-black border border-black" aria-label="Toggle Dark Mode">
+      <button id="theme-toggle" class="p-2 rounded-full bg-white text-black hover:scale-[1.1] transition duration-300 dark:bg-white dark:text-black shadow" aria-label="Toggle Dark Mode">
         <!-- Icons -->
         <svg id="theme-toggle-light-icon" class="w-6 h-6 hidden" fill="currentColor" viewBox="0 0 20 20">
           <path d="M10 2a1 1 0 011 1v1a1 1 0 11-2 0V3a1 1 0 011-1zm4 8a4 4 0 11-8 0 4 4 0 018 0zM4 11a1 1 0 100-2H3a1 1 0 000 2h1zM17 11a1 1 0 100-2h-1a1 1 0 100 2h1zM10 18a1 1 0 011-1v-1a1 1 0 10-2 0v1a1 1 0 011 1z" />
@@ -34,14 +34,14 @@
       <!-- Controls -->
       <div class="flex justify-center space-x-6">
         <!-- Play -->
-        <button id="play" class="w-16 h-16 rounded-full bg-white text-black flex items-center justify-center shadow">
+        <button id="play" class="w-16 h-16 rounded-full bg-white text-black flex items-center justify-center shadow hover:scale-[1.1] transition duration-300">
           <svg xmlns="http://www.w3.org/2000/svg" viewBox="0 0 24 24" fill="currentColor" class="size-6">
             <path fill-rule="evenodd" d="M4.5 5.653c0-1.427 1.529-2.33 2.779-1.643l11.54 6.347c1.295.712 1.295 2.573 0 3.286L7.28 19.99c-1.25.687-2.779-.217-2.779-1.643V5.653Z" clip-rule="evenodd" />
           </svg>              
         </button>
 
         <!-- Pause -->
-        <button id="pause" class="w-16 h-16 rounded-full bg-white text-black flex items-center justify-center shadow">
+        <button id="pause" class="w-16 h-16 rounded-full bg-white text-black flex items-center justify-center shadow hover:scale-[1.1] transition duration-300">
           <svg xmlns="http://www.w3.org/2000/svg" viewBox="0 0 24 24" fill="currentColor" class="size-6">
             <path fill-rule="evenodd" d="M4.5 7.5a3 3 0 0 1 3-3h9a3 3 0 0 1 3 3v9a3 3 0 0 1-3 3h-9a3 3 0 0 1-3-3v-9Z" clip-rule="evenodd" />
           </svg>                 
@@ -51,7 +51,7 @@
       <!-- Volume -->
       <div class="w-64 mx-auto">
         <label for="volume" class="block mb-2">Volume</label>
-        <input type="range" id="volume" min="0" max="100" value="50" class="w-full accent-gray-900">
+        <input type="range" id="volume" min="0" max="100" value="50" class="w-full bg-white dark:bg-black accent-black dark:accent-white">
       </div>
     </div>
 
