--- a/index.html
+++ b/index.html
@@ -1,5 +1,5 @@
 <!DOCTYPE html>
-<html lang="en" class="transition-colors duration-300">
+<html lang="en" class="transition-colors duration-1000">
   <head>
     <meta charset="UTF-8" />
     <title>lofi</title>
@@ -15,38 +15,37 @@
         height: 0;
         visibility: hidden;
       }
+      /* Force smooth gradient-like transition */
+      html, body {
+        transition: background-color 1s ease, color 1s ease !important;
+      }
     </style>
     <link rel="icon" href="data:image/svg+xml,<svg xmlns=%22http://www.w3.org/2000/svg%22 viewBox=%220 0 16 16%22><text y=%2214%22 font-size=%2216%22>🎵</text></svg>">
   </head>
   <body class="bg-white text-black dark:bg-black dark:text-white flex items-center justify-center min-h-screen">
+    <!-- Dark Mode Toggle (Top Right) -->
+    <button id="theme-toggle" class="absolute top-4 right-4 p-2 rounded-full bg-white text-black hover:scale-[1.1] transition duration-300 dark:bg-white dark:text-black shadow" aria-label="Toggle Dark Mode">
+      <svg id="theme-toggle-light-icon" class="w-6 h-6 hidden" fill="currentColor" viewBox="0 0 20 20">
+        <path d="M10 2a1 1 0 011 1v1a1 1 0 11-2 0V3a1 1 0 011-1zm4 8a4 4 0 11-8 0 4 4 0 018 0zM4 11a1 1 0 100-2H3a1 1 0 000 2h1zM17 11a1 1 0 100-2h-1a1 1 0 100 2h1zM10 18a1 1 0 011-1v-1a1 1 0 10-2 0v1a1 1 0 011 1z" />
+      </svg>
+      <svg id="theme-toggle-dark-icon" class="w-6 h-6" fill="currentColor" viewBox="0 0 20 20">
+        <path d="M17.293 13.293A8 8 0 016.707 2.707a8.001 8.001 0 1010.586 10.586z" />
+      </svg>
+    </button>
+
+    <!-- Main Content (Centered) -->
     <div class="text-center space-y-8">
-      <!-- Dark Mode Toggle -->
-      <button id="theme-toggle" class="p-2 rounded-full bg-white text-black hover:scale-[1.1] transition duration-300 dark:bg-white dark:text-black shadow" aria-label="Toggle Dark Mode">
-        <!-- Icons -->
-        <svg id="theme-toggle-light-icon" class="w-6 h-6 hidden" fill="currentColor" viewBox="0 0 20 20">
-          <path d="M10 2a1 1 0 011 1v1a1 1 0 11-2 0V3a1 1 0 011-1zm4 8a4 4 0 11-8 0 4 4 0 018 0zM4 11a1 1 0 100-2H3a1 1 0 000 2h1zM17 11a1 1 0 100-2h-1a1 1 0 100 2h1zM10 18a1 1 0 011-1v-1a1 1 0 10-2 0v1a1 1 0 011 1z" />
+      <!-- Single Play/Pause Toggle Button -->
+      <button id="play-pause" class="w-16 h-16 rounded-full bg-white text-black flex items-center justify-center shadow hover:scale-[1.1] transition duration-300 mx-auto">
+        <!-- Pause Icon (default) -->
+        <svg id="pause-icon" xmlns="http://www.w3.org/2000/svg" viewBox="0 0 24 24" fill="currentColor" class="size-6">
+          <path fill-rule="evenodd" d="M6.75 5.25a.75.75 0 0 1 .75-.75H9a.75.75 0 0 1 .75.75v13.5a.75.75 0 0 1-.75.75H7.5a.75.75 0 0 1-.75-.75V5.25Zm7.5 0A.75.75 0 0 1 15 4.5h1.5a.75.75 0 0 1 .75.75v13.5a.75.75 0 0 1-.75.75H15a.75.75 0 0 1-.75-.75V5.25Z" clip-rule="evenodd" />
         </svg>
-        <svg id="theme-toggle-dark-icon" class="w-6 h-6 hidden" fill="currentColor" viewBox="0 0 20 20">
-          <path d="M17.293 13.293A8 8 0 016.707 2.707a8.001 8.001 0 1010.586 10.586z" />
+        <!-- Play Icon (hidden by default) -->
+        <svg id="play-icon" xmlns="http://www.w3.org/2000/svg" viewBox="0 0 24 24" fill="currentColor" class="size-6 hidden">
+          <path fill-rule="evenodd" d="M4.5 5.653c0-1.427 1.529-2.33 2.779-1.643l11.54 6.347c1.295.712 1.295 2.573 0 3.286L7.28 19.99c-1.25.687-2.779-.217-2.779-1.643V5.653Z" clip-rule="evenodd" />
         </svg>
       </button>
-
-      <!-- Controls -->
-      <div class="flex justify-center space-x-6">
-        <!-- Play -->
-        <button id="play" class="w-16 h-16 rounded-full bg-white text-black flex items-center justify-center shadow hover:scale-[1.1] transition duration-300">
-          <svg xmlns="http://www.w3.org/2000/svg" viewBox="0 0 24 24" fill="currentColor" class="size-6">
-            <path fill-rule="evenodd" d="M4.5 5.653c0-1.427 1.529-2.33 2.779-1.643l11.54 6.347c1.295.712 1.295 2.573 0 3.286L7.28 19.99c-1.25.687-2.779-.217-2.779-1.643V5.653Z" clip-rule="evenodd" />
-          </svg>              
-        </button>
-
-        <!-- Pause -->
-        <button id="pause" class="w-16 h-16 rounded-full bg-white text-black flex items-center justify-center shadow hover:scale-[1.1] transition duration-300">
-          <svg xmlns="http://www.w3.org/2000/svg" viewBox="0 0 24 24" fill="currentColor" class="size-6">
-            <path fill-rule="evenodd" d="M4.5 7.5a3 3 0 0 1 3-3h9a3 3 0 0 1 3 3v9a3 3 0 0 1-3 3h-9a3 3 0 0 1-3-3v-9Z" clip-rule="evenodd" />
-          </svg>                 
-        </button>
-      </div>
 
       <!-- Volume -->
       <div class="w-64 mx-auto">
@@ -77,8 +76,22 @@
       }
 
       function onPlayerReady() {
-        document.getElementById('play').onclick = () => player.playVideo();
-        document.getElementById('pause').onclick = () => player.pauseVideo();
+        const playPauseBtn = document.getElementById('play-pause');
+        const playIcon = document.getElementById('play-icon');
+        const pauseIcon = document.getElementById('pause-icon');
+
+        playPauseBtn.onclick = () => {
+          if (player.getPlayerState() === YT.PlayerState.PLAYING) {
+            player.pauseVideo();
+            pauseIcon.classList.add('hidden');
+            playIcon.classList.remove('hidden');
+          } else {
+            player.playVideo();
+            pauseIcon.classList.remove('hidden');
+            playIcon.classList.add('hidden');
+          }
+        };
+
         document.getElementById('volume').oninput = e => player.setVolume(e.target.value);
       }
 
@@ -93,9 +106,11 @@
       ) {
         document.documentElement.classList.add('dark');
         lightIcon.classList.remove('hidden');
+        darkIcon.classList.add('hidden');
       } else {
         document.documentElement.classList.remove('dark');
         darkIcon.classList.remove('hidden');
+        lightIcon.classList.add('hidden');
       }
 
       toggleBtn.addEventListener('click', () => {
